evaluation-runs/613/k8s/prod/bookstore-zuul-api-gateway-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-zuul-api-gateway-server
  namespace: bookstore
  labels:
    app: bookstore-zuul-api-gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-zuul-api-gateway-server
  template:
    metadata:
      labels:
        app: bookstore-zuul-api-gateway-server
    spec:
      containers:
        - name: bookstore-zuul-api-gateway-server
          image: ralfx22/bsa-api-gateway:latest
          ports:
            - containerPort: 8765
              protocol: TCP
          resources:
            requests:
              memory: "640Mi"
            limits:
              memory: "640Mi"
      restartPolicy: Always
