evaluation-runs/613/k8s/prod/bookstore-catalog-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
  labels:
    app: bookstore-catalog-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6001
      targetPort: 6001
      protocol: TCP
  selector:
    app: bookstore-catalog-service
