evaluation-runs/613/k8s/prod/bookstore-telegraf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-telegraf
  namespace: bookstore
  labels:
    app: bookstore-telegraf
spec:
  type: ClusterIP
  ports:
    - name: statsd
      port: 8125
      targetPort: 8125
      protocol: UDP
  selector:
    app: bookstore-telegraf
